--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -7,6 +7,8 @@ COPY scripts/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
-EXPOSE 8080
+# Expose the port the app runs on in render.yaml (10000) and local default
+EXPOSE 10000
 ENTRYPOINT ["/entrypoint.sh"]
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
+# Use the full python module path so the container and Render startCommand match
+CMD ["uvicorn", "apps.api.main:app", "--host", "0.0.0.0", "--port", "10000"]
