--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,9 @@ services:
     command: -a 'tor' -P '9050'
 
   api:
-    build: ./apps/api
+    build:
+      context: .
+      dockerfile: ./apps/api/Dockerfile
     env_file: .env
     ports:
       - "8080:8080"
@@ -24,7 +26,9 @@ services:
     restart: unless-stopped
 
   workers:
-    build: ./apps/workers
+    build:
+      context: .
+      dockerfile: ./apps/workers/Dockerfile
     env_file: .env
     depends_on:
       - redis
